Change p2 repo to http://download.eclipse.org/eclipse/updates/4.8-I-builds

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<repository>
 			<id>pluton</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/eclipse/updates/4.8milestones</url>
+			<url>http://download.eclipse.org/eclipse/updates/4.8-I-builds</url>
 		</repository>
 	</repositories>
 </project>
