Add JUnit preferences + demos

--- a/org.eclipse.jdt.codemining/plugin.properties
+++ b/org.eclipse.jdt.codemining/plugin.properties
@@ -1,3 +1,5 @@
-JUnitCodeMiningProvider.label=JUnit minings
+JavaCodeMiningProvider.label=Java reference/implementation minings
+JavaMethodParameterCodeMiningProvider.label=Java method parameter minings
+JUnitCodeMiningProvider.label=JUnit status/run/debug minings
 
 codeMiningPageName=Code Minings
