--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -2,6 +2,6 @@ CodeMiningPreferencePage_description=Java Code Mining
 CodeMiningPreferencePage_showReferences_label=Show references
 CodeMiningPreferencePage_showImplementations_label=Show implementations
 CodeMiningPreferencePage_showMethodParameters_label=Show method parameters
-CodeMiningPreferencePage_showJUnitStatus_label=Show JUnit satus
-CodeMiningPreferencePage_showJUnitRun_label=Show JUnit Run
-CodeMiningPreferencePage_showJUnitDebug_label=Show JUnit Debug
+CodeMiningPreferencePage_showJUnitStatus_label=Show JUnit status
+CodeMiningPreferencePage_showJUnitRun_label=Show JUnit run
+CodeMiningPreferencePage_showJUnitDebug_label=Show JUnit debug
