--- a/org.eclipse.jdt.codemining/plugin.xml
+++ b/org.eclipse.jdt.codemining/plugin.xml
@@ -48,8 +48,11 @@
                      <test property="org.eclipse.core.resources.contentTypeId" value="org.eclipse.jdt.core.javaSource" />
                   </adapt>
            	   </with>
-           	   <!-- TODO: change to property="org.eclipse.jdt.ui.hasPreference" -->
-			  <test property="org.eclipse.jdt.codemining.hasPreference" value="java.codemining.methodParameters.enabled" forcePluginActivation="true"/>
+           	   <or>
+           	   	  <!-- TODO: change to property="org.eclipse.jdt.ui.hasPreference" -->
+	              <test property="org.eclipse.jdt.codemining.hasPreference" value="java.codemining.methodParameter.names.enabled" forcePluginActivation="true"/>
+	              <test property="org.eclipse.jdt.codemining.hasPreference" value="java.codemining.methodParameter.types.enabled" forcePluginActivation="true"/>
+	           </or>
            	</and>
          </enabledWhen>
       </codeMiningProvider>
