--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -1,7 +1,8 @@
 CodeMiningPreferencePage_description=Java Code Mining
 CodeMiningPreferencePage_showReferences_label=Show references
 CodeMiningPreferencePage_showImplementations_label=Show implementations
-CodeMiningPreferencePage_showMethodParameters_label=Show method parameters
+CodeMiningPreferencePage_showMethodParameterNames_label=Show method parameter names
+CodeMiningPreferencePage_showMethodParameterTypes_label=Show method parameter types
 CodeMiningPreferencePage_showJUnitStatus_label=Show JUnit status
 CodeMiningPreferencePage_showJUnitRun_label=Show JUnit run
 CodeMiningPreferencePage_showJUnitDebug_label=Show JUnit debug
