Implement Show only at least (see #1)

--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -1,8 +1,10 @@
-CodeMiningPreferencePage_description=Java Code Mining
-CodeMiningPreferencePage_showReferences_label=Show references
-CodeMiningPreferencePage_showImplementations_label=Show implementations
-CodeMiningPreferencePage_showMethodParameterNames_label=Show method parameter names
-CodeMiningPreferencePage_showMethodParameterTypes_label=Show method parameter types
-CodeMiningPreferencePage_showJUnitStatus_label=Show JUnit status
-CodeMiningPreferencePage_showJUnitRun_label=Show JUnit run
-CodeMiningPreferencePage_showJUnitDebug_label=Show JUnit debug
+JavaEditorCodeMiningPreferencePage_description=Java Code Mining
+JavaEditorCodeMiningPreferencePage_showReferences_label=Show references
+JavaEditorCodeMiningPreferencePage_showReferences_atLeastOne_label=Only if there is at least one reference
+JavaEditorCodeMiningPreferencePage_showImplementations_label=Show implementations
+JavaEditorCodeMiningPreferencePage_showImplementations_atLeastOne_label=Only if there is at least one implementation
+JavaEditorCodeMiningPreferencePage_showMethodParameterNames_label=Show method parameter names
+JavaEditorCodeMiningPreferencePage_showMethodParameterTypes_label=Show method parameter types
+JavaEditorCodeMiningPreferencePage_showJUnitStatus_label=Show JUnit status
+JavaEditorCodeMiningPreferencePage_showJUnitRun_label=Show JUnit run
+JavaEditorCodeMiningPreferencePage_showJUnitDebug_label=Show JUnit debug
