--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -5,6 +5,7 @@ JavaEditorCodeMiningPreferencePage_showImplementations_label=Show implementation
 JavaEditorCodeMiningPreferencePage_showImplementations_atLeastOne_label=Only if there is at least one implementation
 JavaEditorCodeMiningPreferencePage_showMethodParameterNames_label=Show method parameter names
 JavaEditorCodeMiningPreferencePage_showMethodParameterTypes_label=Show method parameter types
+JavaEditorCodeMiningPreferencePage_showEndStatement_label=Show end statement
 JavaEditorCodeMiningPreferencePage_showJUnitStatus_label=Show JUnit status
 JavaEditorCodeMiningPreferencePage_showJUnitRun_label=Show JUnit run
 JavaEditorCodeMiningPreferencePage_showJUnitDebug_label=Show JUnit debug
