Add "Show variable values inline while debugging" preference (see #17)
Signed-off-by: azerr <angelo.zerr@gmail.com>

--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -9,3 +9,4 @@ JavaEditorCodeMiningPreferencePage_showEndStatement_label=Show end statement
 JavaEditorCodeMiningPreferencePage_showJUnitStatus_label=Show JUnit status
 JavaEditorCodeMiningPreferencePage_showJUnitRun_label=Show JUnit run
 JavaEditorCodeMiningPreferencePage_showJUnitDebug_label=Show JUnit debug
+JavaEditorCodeMiningPreferencePage_showVariableValueWhileDebugging_label=Show variable values inline while debugging
