--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -1,12 +1,15 @@
-JavaEditorCodeMiningPreferencePage_description=Java Code Mining
-JavaEditorCodeMiningPreferencePage_showReferences_label=Show references
-JavaEditorCodeMiningPreferencePage_showReferences_atLeastOne_label=Only if there is at least one reference
-JavaEditorCodeMiningPreferencePage_showImplementations_label=Show implementations
-JavaEditorCodeMiningPreferencePage_showImplementations_atLeastOne_label=Only if there is at least one implementation
-JavaEditorCodeMiningPreferencePage_showMethodParameterNames_label=Show method parameter names
-JavaEditorCodeMiningPreferencePage_showMethodParameterTypes_label=Show method parameter types
-JavaEditorCodeMiningPreferencePage_showEndStatement_label=Show end statement
-JavaEditorCodeMiningPreferencePage_showJUnitStatus_label=Show JUnit status
-JavaEditorCodeMiningPreferencePage_showJUnitRun_label=Show JUnit run
-JavaEditorCodeMiningPreferencePage_showJUnitDebug_label=Show JUnit debug
-JavaEditorCodeMiningPreferencePage_showVariableValueWhileDebugging_label=Show variable values inline while debugging
+JavaEditorCodeMiningConfigurationBlock_common_description=&Select the code minings that you wish to enable/disable:
+JavaEditorCodeMiningConfigurationBlock_section_general=&General
+JavaEditorCodeMiningConfigurationBlock_showReferences_label=Show references
+JavaEditorCodeMiningConfigurationBlock_showReferences_atLeastOne_label=Only if there is at least one reference
+JavaEditorCodeMiningConfigurationBlock_showImplementations_label=Show implementations
+JavaEditorCodeMiningConfigurationBlock_showImplementations_atLeastOne_label=Only if there is at least one implementation
+JavaEditorCodeMiningConfigurationBlock_showMethodParameterNames_label=Show method parameter names
+JavaEditorCodeMiningConfigurationBlock_showMethodParameterTypes_label=Show method parameter types
+JavaEditorCodeMiningConfigurationBlock_showEndStatement_label=Show end statement
+JavaEditorCodeMiningConfigurationBlock_section_junit=&JUnit
+JavaEditorCodeMiningConfigurationBlock_showJUnitStatus_label=Show JUnit status
+JavaEditorCodeMiningConfigurationBlock_showJUnitRun_label=Show JUnit run
+JavaEditorCodeMiningConfigurationBlock_showJUnitDebug_label=Show JUnit debug
+JavaEditorCodeMiningConfigurationBlock_section_debugging=&Debugging
+JavaEditorCodeMiningConfigurationBlock_showVariableValueWhileDebugging_label=Show variable values inline while debugging
