Display end statement mining according the min line number (see #16)
Signed-off-by: azerr <angelo.zerr@gmail.com>

--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -7,6 +7,7 @@ JavaEditorCodeMiningConfigurationBlock_showImplementations_atLeastOne_label=Only
 JavaEditorCodeMiningConfigurationBlock_showMethodParameterNames_label=Show method parameter names
 JavaEditorCodeMiningConfigurationBlock_showMethodParameterTypes_label=Show method parameter types
 JavaEditorCodeMiningConfigurationBlock_showEndStatement_label=Show end statement
+JavaEditorCodeMiningConfigurationBlock_showEndStatement_minLineNumber_label=when minimum line number:
 JavaEditorCodeMiningConfigurationBlock_section_junit=&JUnit
 JavaEditorCodeMiningConfigurationBlock_showJUnitStatus_label=Show JUnit status
 JavaEditorCodeMiningConfigurationBlock_showJUnitRun_label=Show JUnit run
