Initialize EGit CodeMining project.
Signed-off-by: azerr <angelo.zerr@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
   <modules>
     <module>org.eclipse.jdt.codemining</module>
+    <module>org.eclipse.egit.codemining</module>
     <module>plugin_to_delete_when_m7</module>
     <module>update-site</module>
   </modules>
