--- a/org.eclipse.egit.codemining/plugin.properties
+++ b/org.eclipse.egit.codemining/plugin.properties
@@ -9,10 +9,4 @@
 #	Angelo Zerr <angelo.zerr@gmail.com> - Initial API and implementation
 ###############################################################################
 providerName=Angelo ZERR
-pluginName=JDT CodeMining
-
-JavaCodeMiningProvider.label=Java reference/implementation minings
-JavaMethodParameterCodeMiningProvider.label=Java method parameter minings
-JUnitCodeMiningProvider.label=JUnit status/run/debug minings
-
-codeMiningPageName=Code Minings
+pluginName=Egit CodeMining
