Initialize Git provider (see #22)
Signed-off-by: azerr <angelo.zerr@gmail.com>

--- a/org.eclipse.egit.codemining/plugin.properties
+++ b/org.eclipse.egit.codemining/plugin.properties
@@ -10,3 +10,5 @@
 ###############################################################################
 providerName=Angelo ZERR
 pluginName=Egit CodeMining
+
+JavaGitCodeMiningProvider.label=Java Git CodeMining Provider
