Move Git mining to JDT CodeMining (see #21)

--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -14,6 +14,6 @@ JavaEditorCodeMiningConfigurationBlock_showJUnitRun_label=Show JUnit run
 JavaEditorCodeMiningConfigurationBlock_showJUnitDebug_label=Show JUnit debug
 JavaEditorCodeMiningConfigurationBlock_section_debugging=&Debugging
 JavaEditorCodeMiningConfigurationBlock_showVariableValueWhileDebugging_label=Show variable values inline while debugging
-JavaEditorCodeMiningConfigurationBlock_section_git=&Git
-JavaEditorCodeMiningConfigurationBlock_showGitAuthor_label=Show author (and date)
+JavaEditorCodeMiningConfigurationBlock_section_scsm=&SCCM (Git, SVN...)
+JavaEditorCodeMiningConfigurationBlock_showRevisionRecentChange=Show revision recent change
 JavaEditorCodeMiningConfigurationBlock_showGitChanges_label=Show changes number
