--- a/org.eclipse.egit.codemining/plugin.xml
+++ b/org.eclipse.egit.codemining/plugin.xml
@@ -2,27 +2,8 @@
 <?eclipse version="3.0"?>
 <plugin>
    
-     <extension
-         point="org.eclipse.ui.workbench.texteditor.codeMiningProviders">
-      <codeMiningProvider
-         class="org.eclipse.egit.internal.JavaGitCodeMiningProvider"
-         id="org.eclipse.egit.codemining.general"
-         label="%JavaGitCodeMiningProvider.label">
-	     <enabledWhen>
-	        <and>
-	            <with variable="editorInput">
-	               <adapt type="org.eclipse.core.resources.IFile">
-	                  <test property="org.eclipse.core.resources.contentTypeId" value="org.eclipse.jdt.core.javaSource" />
-	               </adapt>
-	           	</with>
-	           	<or>
-	           	   <!-- TODO: change to property="org.eclipse.jdt.ui.hasPreference" -->
-	           	   <test property="org.eclipse.jdt.codemining.hasPreference" value="java.codemining.git.author" forcePluginActivation="true"/>
-	           	   <test property="org.eclipse.jdt.codemining.hasPreference" value="java.codemining.git.changes" forcePluginActivation="true"/>
-	           	</or>	           	
-           	</and>
-         </enabledWhen>
-      </codeMiningProvider>
+   <extension point="org.eclipse.ui.startup">
+     <startup class="org.eclipse.egit.codemining.internal.EGitCodeMiningStartup"/>
    </extension>
 
 </plugin>
