--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -16,4 +16,6 @@ JavaEditorCodeMiningConfigurationBlock_section_debugging=&Debugging
 JavaEditorCodeMiningConfigurationBlock_showVariableValueWhileDebugging_label=Show variable values inline while debugging
 JavaEditorCodeMiningConfigurationBlock_section_scsm=&SCCM (Git, SVN...)
 JavaEditorCodeMiningConfigurationBlock_showRevisionRecentChange=Show revision recent change
+JavaEditorCodeMiningConfigurationBlock_showRevisionRecentChangeWithAvatar=Show avatar
+JavaEditorCodeMiningConfigurationBlock_showRevisionRecentChangeWithDate=Show date ago
 JavaEditorCodeMiningConfigurationBlock_showGitChanges_label=Show changes number
