--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -18,4 +18,5 @@ JavaEditorCodeMiningConfigurationBlock_section_scsm=&SCCM (Git, SVN...)
 JavaEditorCodeMiningConfigurationBlock_showRevisionRecentChange=Show revision recent change
 JavaEditorCodeMiningConfigurationBlock_showRevisionRecentChangeWithAvatar=Show avatar
 JavaEditorCodeMiningConfigurationBlock_showRevisionRecentChangeWithDate=Show date ago
+JavaEditorCodeMiningConfigurationBlock_showRevisionAuthors=Show authors
 JavaEditorCodeMiningConfigurationBlock_showGitChanges_label=Show changes number
