--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -8,6 +8,8 @@ JavaEditorCodeMiningConfigurationBlock_showMethodParameterNames_label=Show metho
 JavaEditorCodeMiningConfigurationBlock_showMethodParameterTypes_label=Show method parameter types
 JavaEditorCodeMiningConfigurationBlock_showEndStatement_label=Show end statement
 JavaEditorCodeMiningConfigurationBlock_showEndStatement_minLineNumber_label=when minimum line number:
+JavaEditorCodeMiningConfigurationBlock_showMainRun_label=Show run for main method
+JavaEditorCodeMiningConfigurationBlock_showMainDebug_label=Show debug for main method
 JavaEditorCodeMiningConfigurationBlock_section_junit=&JUnit
 JavaEditorCodeMiningConfigurationBlock_showJUnitStatus_label=Show JUnit status
 JavaEditorCodeMiningConfigurationBlock_showJUnitRun_label=Show JUnit run
