--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -10,6 +10,7 @@ JavaEditorCodeMiningConfigurationBlock_showEndStatement_label=Show end statement
 JavaEditorCodeMiningConfigurationBlock_showEndStatement_minLineNumber_label=when minimum line number:
 JavaEditorCodeMiningConfigurationBlock_showMainRun_label=Show run for main method
 JavaEditorCodeMiningConfigurationBlock_showMainDebug_label=Show debug for main method
+JavaEditorCodeMiningConfigurationBlock_showJava9VarType_label=Show type of Java9 'var' declaration
 JavaEditorCodeMiningConfigurationBlock_section_junit=&JUnit
 JavaEditorCodeMiningConfigurationBlock_showJUnitStatus_label=Show JUnit status
 JavaEditorCodeMiningConfigurationBlock_showJUnitRun_label=Show JUnit run
