fix all plugin/maven warnings
* add missing keyword extension in plugin.xml
* add automatic module name for java 9+
* fix build.properties output paths
* remove duplicate group and version id in pom.xml

Only warning left is the id of the jdt-codemining-feature, since
changing that would break existing installations when creating a new
version of the update site.

--- a/org.eclipse.jdt.codemining/plugin.xml
+++ b/org.eclipse.jdt.codemining/plugin.xml
@@ -117,5 +117,12 @@
             id="org.eclipse.jdt.ui.preferences.JavaEditorCodeMiningPreferencePage">
             <keywordReference id="org.eclipse.jdt.ui.codemining"/>
       </page>   
-    </extension>   
+    </extension>
+   <extension
+         point="org.eclipse.ui.keywords">
+      <keyword
+            id="org.eclipse.jdt.ui.codemining"
+            label="code mining">
+      </keyword>
+   </extension>   
 </plugin>
