Support "Show parameter only for literal" (see #45)

--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -1,25 +1,32 @@
+# General section
 JavaEditorCodeMiningConfigurationBlock_common_description=&Select the code minings that you wish to enable/disable:
 JavaEditorCodeMiningConfigurationBlock_section_general=&General
 JavaEditorCodeMiningConfigurationBlock_showReferences_label=Show references
 JavaEditorCodeMiningConfigurationBlock_showReferences_atLeastOne_label=Only if there is at least one reference
 JavaEditorCodeMiningConfigurationBlock_showImplementations_label=Show implementations
 JavaEditorCodeMiningConfigurationBlock_showImplementations_atLeastOne_label=Only if there is at least one implementation
-JavaEditorCodeMiningConfigurationBlock_showMethodParameterNames_label=Show method parameter names
-JavaEditorCodeMiningConfigurationBlock_showMethodParameterTypes_label=Show method parameter types
 JavaEditorCodeMiningConfigurationBlock_showEndStatement_label=Show end statement
 JavaEditorCodeMiningConfigurationBlock_showEndStatement_minLineNumber_label=when minimum line number:
 JavaEditorCodeMiningConfigurationBlock_showMainRun_label=Show run for main method
 JavaEditorCodeMiningConfigurationBlock_showMainDebug_label=Show debug for main method
 JavaEditorCodeMiningConfigurationBlock_showJava10VarType_label=Show type of Java10 'var' declaration
+# Method parameter section
+JavaEditorCodeMiningConfigurationBlock_section_methodParameter=&Method parameter
+JavaEditorCodeMiningConfigurationBlock_showMethodParameterNames_label=Show method parameter names
+JavaEditorCodeMiningConfigurationBlock_showMethodParameterTypes_label=Show method parameter types
+JavaEditorCodeMiningConfigurationBlock_showMethodParameterOnlyForLiteral_label=Show parameter only for literal
+# JUnit section
 JavaEditorCodeMiningConfigurationBlock_section_junit=&JUnit
 JavaEditorCodeMiningConfigurationBlock_showJUnitStatus_label=Show JUnit status
 JavaEditorCodeMiningConfigurationBlock_showJUnitRun_label=Show JUnit run
 JavaEditorCodeMiningConfigurationBlock_showJUnitDebug_label=Show JUnit debug
+# Debugging section
 JavaEditorCodeMiningConfigurationBlock_section_debugging=&Debugging
 JavaEditorCodeMiningConfigurationBlock_showVariableValueWhileDebugging_label=Show variable values inline while debugging
+# SCCM section
 JavaEditorCodeMiningConfigurationBlock_section_scsm=&SCCM (Git, SVN...)
 JavaEditorCodeMiningConfigurationBlock_showRevisionRecentChange=Show revision recent change
-JavaEditorCodeMiningConfigurationBlock_showRevisionRecentChangeWithAvatar=Show gravatar
+JavaEditorCodeMiningConfigurationBlock_showRevisionRecentChangeWithAvatar=Show Avatar
 JavaEditorCodeMiningConfigurationBlock_showRevisionRecentChangeWithDate=Show date ago
 JavaEditorCodeMiningConfigurationBlock_showRevisionAuthors=Show authors
 JavaEditorCodeMiningConfigurationBlock_showGitChanges_label=Show changes number
